--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "thoughtly",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "App to post small thoughts",
   "main": "app.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node app.js",
-    "dev": "cross-env NODE_ENV=development nodemon app.js"
+    "dev": "npx standard --fix && cross-env NODE_ENV=development nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -28,10 +28,12 @@
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.16"
+    "nodemon": "^1.3.3",
+    "standard": "^17.0.0"
   }
 }
